# bakery

backend/: .gitignore  .pre-commit-config.yaml  README.md  celerybeat-schedule  manage.py  mypy.ini  nohup.out  pyproject.toml  requirements.txt  sample.env
backend/account/: admin.py  middleware.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/account/fixtures/: reset_password.json  users.json
backend/account/migrations/: 0001_initial.py  0002_customuser_is_active_customuser_is_staff_and_more.py  0003_employeeaddress.py  0004_employeeaddress_state_alter_employeeaddress_country.py  0005_rename_contact_number_employeeaddress_contact_no.py  0006_employeedetail_delete_employeeaddress.py  0007_alter_employeedetail_shift.py  0008_alter_employeedetail_shift.py  0009_alter_employeedetail_user.py  0010_alter_employeedetail_country_and_more.py  0017_userprofile.py  (+10 more)
backend/bakery/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
backend/bakery_management/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/blogs/: admin.py  models.py  serializers.py  urls.py  views.py
backend/cart/: apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
backend/coupon/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/dashboard/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/delivery/: serializers.py  urls.py  views.py
backend/notification/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/orders/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
backend/product/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/recipe/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/templates/: invoice.html  orders.html  recipe.html
backend/todos/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
(+498 files in other folders)
